# lightcurve

./: .gitignore  README.md  pyproject.toml
lightcurve/: __init__.py  __main__.py
